hphp/test/zend/good/ext/mysqli/tests/bug30967.php
<?php
	require_once("connect.inc");

	class mysql1 extends mysqli {
	}

	class mysql2 extends mysql1 {
	}

	$mysql = new mysql2($host, $user, $passwd, $db, $port, $socket);

	$mysql->query("THIS DOES NOT WORK");
	printf("%d\n", $mysql->errno);

	$mysql->close();
?>